--- a/IPSX/Flows/Register/Storyboard/Register.storyboard
+++ b/IPSX/Flows/Register/Storyboard/Register.storyboard
@@ -241,6 +241,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="YJu-K0-HPr"/>
                     <connections>
+                        <outlet property="backgroundImageView" destination="G34-ca-zlr" id="t2F-YK-N0l"/>
                         <outlet property="bottomContinueConstraint" destination="N5o-eH-FFD" id="5Fu-wC-Um1"/>
                         <outlet property="continueButton" destination="4oS-F8-qwt" id="oG1-En-NeB"/>
                         <outlet property="emailRichTextView" destination="5yo-xq-4BK" id="YCH-IR-yme"/>
@@ -520,6 +521,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="0e8-Db-69X"/>
                     <connections>
+                        <outlet property="backgroundImageView" destination="Jyq-XU-knM" id="4Be-5B-wFP"/>
                         <outlet property="loadingView" destination="c05-Gj-MdM" id="BPd-UA-RbE"/>
                         <outlet property="readWPLabel" destination="rR5-6h-BhI" id="kKQ-KW-dsy"/>
                         <outlet property="registerButton" destination="zJr-kv-cZI" id="MKM-zt-x9x"/>
@@ -604,6 +606,9 @@
                         <viewLayoutGuide key="safeArea" id="OPc-a5-Neu"/>
                     </view>
                     <navigationItem key="navigationItem" id="WFn-1B-lf9"/>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="Ej4-YF-FWo" id="pAH-sD-JDd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0vf-CK-5bp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -732,6 +737,9 @@
                         <viewLayoutGuide key="safeArea" id="upd-gp-bcO"/>
                     </view>
                     <navigationItem key="navigationItem" id="G27-0A-fiU"/>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="74b-ZJ-UEf" id="Hlr-W9-5rA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IZX-np-Lbh" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="bsh-q8-rk0" userLabel="Exit" sceneMemberID="exit"/>
