--- a/IPSX/Storyboard/Landing.storyboard
+++ b/IPSX/Storyboard/Landing.storyboard
@@ -104,6 +104,7 @@ Accepted currency: ether</string>
                         <viewLayoutGuide key="safeArea" id="zTh-l3-rXH"/>
                     </view>
                     <connections>
+                        <outlet property="backgroundImageView" destination="lT4-1r-KeI" id="Ecl-5A-mdJ"/>
                         <outlet property="bottomView" destination="MRN-Ud-kuM" id="up9-Wv-GQ7"/>
                         <outlet property="labelTopConstraint" destination="QTD-dZ-Qc2" id="rtl-VJ-vk5"/>
                     </connections>
