Implement data loading logic for logged in user

--- a/IPSX/Storyboard/Main.storyboard
+++ b/IPSX/Storyboard/Main.storyboard
@@ -762,7 +762,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="345" height="67"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <connections>
-                                            <segue destination="SgZ-0q-6gz" kind="show" id="weW-2a-Rsj"/>
+                                            <segue destination="SgZ-0q-6gz" kind="show" identifier="showProfileSegueID" id="weW-2a-Rsj"/>
                                         </connections>
                                     </button>
                                 </subviews>
