update token request & profile info when needed after Login

--- a/IPSX/Flows/Dashboard/Storyboard/TokenRequest.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/TokenRequest.storyboard
@@ -227,6 +227,7 @@
                     <connections>
                         <outlet property="noItemsLabel" destination="HGt-lo-kkP" id="dlq-Lg-6tb"/>
                         <outlet property="separatorView" destination="jXc-1c-sUJ" id="KlJ-6w-Nec"/>
+                        <outlet property="tableView" destination="cOM-dK-uZM" id="Kxe-uZ-NRh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6pq-8Y-JIy" userLabel="First Responder" sceneMemberID="firstResponder"/>
